--- a/templates/admin/_list_activity.html
+++ b/templates/admin/_list_activity.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-striped responsive datatables">
+<table class="table table-striped datatables">
     <thead>
         <tr>
             <th>#</th>
