--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -94,7 +94,7 @@
 </ul>
 <div class="box">
     {% if pagename == "list" %}
-        <table class="table table-hover">
+        <table class="table">
             <thead>
                 <tr>
                     <th>File name</th>
