--- a/templates/layout/_indexCase.html
+++ b/templates/layout/_indexCase.html
@@ -1,6 +1,6 @@
 <div class="box">
     {% if cases %}
-        <table class="table table-hover datatables">
+        <table class="table datatables">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -41,7 +41,7 @@
             </tbody>
         </table>
     {% else %}
-        <div class="alert alert-info">
+        <div class="alert">
             <span class="fa fa-info-circle"></span>
             <strong>Info!</strong>
             No data available
