--- a/templates/analyses/cases/_favorites.html
+++ b/templates/analyses/cases/_favorites.html
@@ -17,11 +17,11 @@
                         <td>{{ image.owner.username }}</td>
                         <td>{{ image.created_at }}</td>
                         <td>
-                            <a class="btn fancybox" data-tooltip="tooltip" title="Show preview" href="{% url "analyses.views.image" image.image_id %}">
+                            <a class="btn btn-primary fancybox" data-tooltip="tooltip" title="Show preview" href="{% url "analyses.views.image" image.image_id %}">
                                 <i class="fa fa-photo"> </i>
                             </a>
-                            <a class="btn" data-tooltip="tooltip" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
-                                <i class="fa fa-list"> </i>
+                            <a class="btn btn-info" data-tooltip="tooltip" title="Show analysis" href="{% url "analyses.views.show_analysis" image.id %}">
+                                <i class="fa fa-file-text"> </i>
                             </a>
                             <a class="btn btn-warning unfavorite" id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" data-tooltip="tooltip" title="Unfavorite">
                                 <i class="fa fa-star"> </i>
