--- a/templates/analyses/cases/_list_image.html
+++ b/templates/analyses/cases/_list_image.html
@@ -1,5 +1,5 @@
 <div class="box">
-    <table class="table table-hover responsive">
+    <table class="table">
         <thead>
             <tr>
                 <th>File name</th>
