--- a/templates/analyses/cases/_map_image.html
+++ b/templates/analyses/cases/_map_image.html
@@ -3,8 +3,9 @@
 <div class="alert hide" id="noNet">
     <strong>Warning!</strong> To use the map feature you need to be connected to internet.
 </div>
-
-<div id="map_canvas"></div>
+<div class="box">
+    <div id="map_canvas"></div>
+</div>
 
 <script type="text/javascript">
 $(document).ready(function(){
